# ficus

./: .gitignore  .travis.yml  Examples.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  example.ipynb  matplotlibrc  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
ficus/: __init__.py  manager.py
ficus/tests/: conftest.py  test_figuremanager.py  utils.py
