[metadata]
name = ficus
author = Camille Scott
author_email = camille.scott.w@gmail.com
description = context managers for matplotlib subplots
long_description = file: README.rst
version = attr: ficus.__version__
url = https://github.com/camillescott/ficus
license = BSD 3-Clause

[options]
python_requires = >=3.7
packages = find:
zip_safe = False
install_requires = 
	matplotlib>=2.0

[options.extras_require]
tests =
  pytest

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[bumpversion]
current_version = 0.6
commit = True
tag = True

[bumpversion:file:ficus/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
